<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="fragments.bnv.NowPlayingFragment">

    <RelativeLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_six_dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="@dimen/thirty_six_dp"
            android:layout_height="@dimen/thirty_six_dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_down"
            android:tint="@color/AliceBlue" />

        <ImageButton
            android:id="@+id/song_info"
            android:layout_width="@dimen/thirty_six_dp"
            android:layout_height="@dimen/thirty_six_dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:src="@drawable/information_outline"
            android:tint="@color/AliceBlue" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="@dimen/two_hundred_dp"
        android:layout_height="@dimen/two_hundred_dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/thirty_six_dp"
        android:layout_marginStart="@dimen/thirty_six_dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/album_art"
        android:scaleType="fitXY"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/album_art"
        android:layout_marginLeft="@dimen/thirty_six_dp"
        android:layout_marginStart="@dimen/thirty_six_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:textColor="@color/AliceBlue"
        android:textSize="@dimen/twenty_four_sp"
        tools:text="So Far Away" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/album_title"
        android:layout_marginLeft="@dimen/thirty_six_dp"
        android:layout_marginStart="@dimen/thirty_six_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:textColor="@color/AliceBlue"
        android:textSize="@dimen/sixteen_sp"
        tools:text="So Far Away" />

    <LinearLayout
        android:id="@+id/seekbar_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_panel"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/eight_dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/played_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/PattensBlue"
            tools:text="00:00" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            android:layout_weight="1"
            android:progressBackgroundTint="@color/AliceBlue"
            android:progressTint="@color/DarkTeal"
            android:thumbTint="@color/Teal"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/total_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/PattensBlue"
            tools:text="00:00" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/thirty_six_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeat"
            android:layout_width="@dimen/thirty_six_dp"
            android:layout_height="@dimen/thirty_six_dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="@null"
            android:contentDescription="@string/repeat"
            android:src="@drawable/repeat"
            android:tag="off"
            android:tint="@color/AliceBlue" />

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="@dimen/forty_eight_dp"
            android:layout_height="@dimen/forty_eight_dp"
            android:layout_marginLeft="@dimen/sixteen_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:background="@null"
            android:contentDescription="@string/previous"
            android:src="@drawable/skip_previous"
            android:tint="@color/AliceBlue" />

        <ImageButton
            android:id="@+id/play"
            android:layout_width="@dimen/sixty_four_dp"
            android:layout_height="@dimen/sixty_four_dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="@null"
            android:contentDescription="@string/play"
            android:src="@drawable/play_circle_outline"
            android:tag="pause"
            android:tint="@color/AliceBlue" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="@dimen/forty_eight_dp"
            android:layout_height="@dimen/forty_eight_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            android:layout_marginRight="@dimen/sixteen_dp"
            android:background="@null"
            android:contentDescription="@string/next"
            android:src="@drawable/skip_next"
            android:tint="@color/AliceBlue" />

        <ImageButton
            android:id="@+id/like"
            android:layout_width="@dimen/thirty_six_dp"
            android:layout_height="@dimen/thirty_six_dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="@null"
            android:contentDescription="@string/shuffle"
            android:src="@drawable/heart_outline"
            android:tag="off"
            android:tint="@color/AliceBlue" />

    </LinearLayout>

</RelativeLayout>
